
--- V3.0 RC1 (beta,in CVS) ---	

2004-03-11, Kato
  Implemented ZenAction class, cleaned up ZenSystemAction
    - zentrack/includes/lib/classes/Zen.php 1.23
    - zentrack/includes/lib/classes/ZenAction.php 1.3
    - zentrack/includes/lib/classes/ZenSystemAction.php 1.9
  Improvements to ZenCriteriaSet, ZenParm and ZenParmSet
    - zentrack/includes/lib/classes/ZenCriteriaSet.php 1.7
    - zentrack/includes/lib/classes/ZenList.php 1.13
    - zentrack/includes/lib/classes/ZenParm.php 1.6
    - zentrack/includes/lib/classes/ZenParmList.php 1.3
  Added new list() method to ZenQuery
    - zentrack/includes/lib/classes/ZenQuery.php 1.20

2004-03-10, Kato
  Updated install.php to work properly when installing
  to a different target directory than the source code
    - zentrack/includes/lib/classes/Zen.php 1.22
    - zentrack/includes/lib/classes/ZenCriteriaSet.php 1.6
    - zentrack/includes/lib/classes/ZenDBXML.php 1.20
    - zentrack/includes/lib/classes/ZenDatabase.php 1.17
    - zentrack/includes/lib/classes/ZenParm.php 1.5
    - zentrack/includes/lib/classes/ZenUser.php 1.6
    - zentrack/includes/lib/classes/ZenUtils.php 1.30
    - zentrack/includes/lib/classes/ZenXMLParser.php 1.17
    - zentrack/includes/lib/inc/global.php 1.16
    - zentrack/install/install.php 1.12
    - zentrack/install/defaults/header.php.tpl 1.3
    - zentrack/install/defaults/zen.ini.tpl 1.3
    - zentrack/install/setup/ZenTargets.php 1.23

2004-03-07, Kato
  Completed implementation of Smarty template library
  Implemented "full_install" target for install program
  Cleaned up targets, dev utilities,  etc
	
2004-01-06, Kato
  Completed db schema tools, install program, form generator

2003-11-14, Kato
  Added db schema classes for maintining db structure

2003-11-6, Kato
  Implemented ZenQuery object
  Added ability to iterate arrays to ZenTemplate
  Updated phpunit tests
  Cleaned up ZenUtils
  Completed preparations for the db install code

2003-10-30, Kato